--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,7 @@ author = masa
 mod_file_name = itemscroller-fabric
 
 # Current mod version
-mod_version = craftfix-1.2.3
+mod_version = craftfixtrade-1.3.0
 
 # Required malilib version
 malilib_version = 0.10.0-dev.21+arne.1
